[tool.poetry]
name        = "ytdrop-api"
version     = "0.1.0"
description = "API de descarga de audio/video con yt-dlp"
authors     = ["Tu Nombre"]

[tool.poetry.dependencies]
python     = "^3.11"
fastapi    = "^0.111.0"
uvicorn    = { extras = ["standard"], version = "^0.29.0" }
yt-dlp     = "^2024.5.27"
pydantic   = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest     = "^8.2.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"